fix refresh with overflow

--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,8 @@ body {
   font-family: sans-serif;
   
   overscroll-behavior-y: contain;
+}
 
+html {
+    overscroll-behavior-y: contain;
 }
